<resources>

    <string name="open">Open</string>

    <string name="close">Close</string>

    <!--TO TRANSLATE ALL WE MUST HAVE ALL TEXTS IN STRING FILES-->
    <string name="app_name">BLOODLINEAPP</string>

    <!--PAGE D'INSCRIPTION-->
    <string name="profil">Choose Your profile image</string>
    <string name="profiledit"> Enter Your Name</string>
    <string name="phoneedit">Enter Your Phone Number</string>
    <string name="ageedit">Enter Your Age</string>
    <string name="bloodedit">Enter Your Blood Group </string>
    <string name="weightedit">Enter Your Weight </string>
    <string name="addressedit">Enter Your City </string>
    <string name="passwordedit">Define Your Password</string>

    <string name="profiltext"> Full Name</string>
    <string name="phonetext">Phone Number</string>
    <string name="agetext">Age</string>
    <string name="weighttext">Weight</string>
    <string name="bloodtext">Blood Group</string>
    <string name="passwordtext">Password</string>
    <string name="addresstext">Address/City</string>

    <string name="bedonortext">Be a donor!</string>

    <!--PAGE MAIN APRES SPLASH-->

    <string name="btngetstarted">Get Started!</string>
    <string name="btnchange">Change Language Before Started</string>

    <string name="welcome">Welcome to BloodlineAPP. Join Us Help To Save Lives.</string>





    <!--PAGE DES EVENEMENTS-->

    <string name="date">Monday June 14th</string>
    <string name="tableau">Compatibility Table</string>
    <string name="allgp">Blood Group</string>





    <!--CHIP NAVIGATION-->

    <!--Page Profil-->
    <string name="phoneuserprofil">Phone Number</string>
    <string name="bloodprofil">User Blood Group</string>


</resources>

