<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Login.Login">

    <ImageView
        android:layout_width="292dp"
        android:layout_height="292dp"
        android:layout_centerInParent="true"
        android:src="@drawable/splash"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


    <RelativeLayout
        android:layout_width="374dp"
        android:layout_height="530dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="93dp"
        android:padding="10dp"
        >

        <ImageView
            android:layout_width="130dp"
            android:layout_height="140dp"
            android:id="@+id/imageView"
            android:src="@drawable/ic_baseline_image_search_24"
            android:layout_centerHorizontal="true"/>

        <TextView android:layout_height="40dp"
            android:layout_width="350dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/imageView"
            android:text="@string/profil"
            android:fontFamily="times"
            android:textSize="17dp"
            android:textColor="@color/colorBlack"
            android:gravity="center"

            android:id="@+id/textprofil"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_below="@id/fullname"
            android:textColorHint="@color/colorBlack"
            android:background="@drawable/edittext_backgroung"
            android:gravity="center"
            android:hint="@string/profiledit"
            android:inputType="text"
            />

        <EditText
            android:id="@+id/userPhone"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_below="@+id/usernumber"
            android:textColorHint="@color/colorBlack"
            android:background="@drawable/edittext_backgroung"
            android:gravity="center"
            android:hint="@string/phoneedit"
            android:inputType="number" />


        <EditText
            android:id="@+id/userpassword"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_below="@id/password"
            android:textColorHint="@color/colorBlack"
            android:background="@drawable/edittext_backgroung"
            android:gravity="center"
            android:hint="@string/passwordedit"
            android:inputType="text" />


        <EditText
            android:id="@+id/usercity"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_below="@+id/city"
            android:textColorHint="@color/colorBlack"
            android:background="@drawable/edittext_backgroung"
            android:gravity="center"
            android:hint="@string/addressedit" />

        <EditText
            android:id="@+id/bloodgroup"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_below="@+id/grpeS"
            android:textColorHint="@color/colorBlack"
            android:background="@drawable/edittext_backgroung"
            android:gravity="center"
            android:hint="@string/bloodedit" />

        <EditText android:layout_height="40dp"
            android:layout_width="350dp"
            android:layout_below="@+id/weight"
            android:textColorHint="@color/colorBlack"
            android:background="@drawable/edittext_backgroung"
            android:hint="@string/weightedit"
            android:gravity="center"
            android:id="@+id/userweight"/>

        <EditText android:layout_height="40dp"
            android:layout_width="350dp"
            android:layout_below="@+id/age"
            android:id="@+id/userage"
            android:textColorHint="@color/colorBlack"
            android:background="@drawable/edittext_backgroung"
            android:hint="@string/ageedit"
            android:gravity="center"/>

        <TextView
            android:id="@+id/fullname"
            android:fontFamily="times"

            android:textSize="17dp"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/profiltext"
            android:layout_below="@id/textprofil"/>

        <TextView
            android:id="@+id/usernumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:fontFamily="times"

            android:textSize="17dp"
            android:textColor="@color/colorBlack"
            android:padding="4dp"
            android:text="@string/phonetext" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="times"

            android:textSize="17dp"
            android:textColor="@color/colorBlack"
            android:layout_below="@+id/userPhone"
            android:padding="4dp"
            android:text="@string/passwordtext" />

        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="times"

            android:textSize="17dp"
            android:textColor="@color/colorBlack"
            android:layout_below="@id/userpassword"
            android:padding="4dp"
            android:text="@string/addresstext" />

        <TextView
            android:id="@+id/grpeS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/usercity"

            android:textSize="17dp"
            android:textColor="@color/colorBlack"
            android:padding="4dp"
            android:text="@string/bloodtext" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bloodgroup"
            android:fontFamily="times"

            android:textSize="17dp"
            android:textColor="@color/colorBlack"

            android:padding="4dp"
            android:text="@string/weighttext"
            android:id="@+id/weight"/>

        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@+id/userweight"
            android:padding="4dp"
            android:text="@string/agetext"
            android:fontFamily="times"

            android:textSize="17dp"
            android:textColor="@color/colorBlack"
            android:id="@+id/age"/>





        <Button
            android:id="@+id/button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:background="@drawable/button_background"
            android:text="@string/bedonortext"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/userage"
            android:layout_centerHorizontal="true"
            android:textSize="17sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button"
            android:layout_marginTop="-108dp"
            android:background="@drawable/btn_change"
            android:text="@string/btnchange"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            tools:ignore="MissingConstraints" />

    </RelativeLayout>

    </ScrollView>





</RelativeLayout>
